@@ -1,6 +1,6 @@
 Attribute Section: aeabi
 File Attributes
-  Tag_CPU_name: "CORTEX-A9"
+  Tag_CPU_name: "Cortex-A9"
   Tag_CPU_arch: v7
   Tag_CPU_arch_profile: Application
   Tag_ARM_ISA_use: Yes
