@@ -1,7 +1,7 @@
 Attribute Section: aeabi
 File Attributes
   Tag_CPU_raw_name: "arch_v6k"
-  Tag_CPU_name: "MPCORE"
+  Tag_CPU_name: "MPCore"
   Tag_CPU_arch: v6K
   Tag_ARM_ISA_use: Yes
   Tag_THUMB_ISA_use: Thumb-1
