@@ -1,3 +1,9 @@
+2010-09-20  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
+	* gas/arm/attr-cpu-directive.d: Update test for change in canonical
+	CPU name.
+	* gas/arm/attr-mcpu.d: Likewise.
+
 2010-09-20  Richard Henderson  <rth@redhat.com>
 
 	* gas/elf/elf.exp: Disable symtab test for alpha.
