@@ -1,3 +1,7 @@
+2010-09-20  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
+	* config/tc-arm.c (arm_cpus): Correct canonical names for Cortex CPUs.
+
 2010-09-20  Richard Henderson  <rth@redhat.com>
 
 	* config/tc-alpha.c (tc_gen_reloc): Remove hack around
